--- a/styles/bookshelf.css
+++ b/styles/bookshelf.css
@@ -11,14 +11,17 @@
     cursor: pointer;
     text-decoration: none;
     color: black;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: larger;
 
     .cover {
         width: 100%;
         max-height: 431px;
     }
+}
 
-    
-    
+.bookinfo {
+    margin-top: 6px;
 }
 
 .bookheadline {
@@ -32,31 +35,62 @@
         height:  1.5rem;
         cursor: pointer;
     }
-
-    .a {
-        text-decoration: none;
-    }
 }
 
 .buchsteckbrief {
     display: grid;
+    width: 70%;
+    align-self: center;
     grid-template-columns: 1fr 1fr;
 
     .steckbrief-cover {
         justify-self: end;
+        height: 400px;
+    }
+}
+
+.chapter {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    align-self: center;
+    padding: 2rem 2.5rem;
+
+    border-radius: 0.5rem;
+    border: 2px solid rgba(54, 30, 1, 0.8);
+
+    background: radial-gradient(circle, #faeeaa, #f7ea9b, #faec9b, #fcecbd);
+    box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.5); /* Schatten am oberen Rand */
+
+    font-size: medium;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    line-height: 1.3;
+
+    max-height: 70vh;
+    overflow-y: scroll;
+    
+    .titel {
+        margin-bottom: 0;
     }
 }
 
 .chapter-navigation {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    width: 50%;
+    align-self: center;
+
+    padding-top: 1rem;
+}
+
+.first-chapter-nav {
+    justify-content: flex-end;
 }
 
 .chapter-nav-link {
     display: flex;
     text-decoration: none;
     align-items: center;
-    
 }
