--- a/styles/style.css
+++ b/styles/style.css
@@ -2,10 +2,16 @@
     height: 100%;
 }
 
-.body {
-    min-height: 100%;
-    /*background-color: aquamarine;*/
+a {
+    text-decoration: none; /* Entfernt die Unterstreichung */
+    color: inherit;
+}
+a:hover {
+    text-shadow: 1px 1px 1px cyan; /* ToDo! */
+}
 
+.body {
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -13,8 +19,22 @@
     margin: 0;
 }
 
+.fit-page {
+    overflow: hidden;
+}
+
 .queer {
-    background-color: rgba(255, 242, 182, 0.8);
+    
+    background: linear-gradient(to bottom, 
+        rgba(255, 0, 0, 0.2),   /* Rot mit 50% Transparenz */
+        rgba(255, 127, 0, 0.2), /* Orange mit 50% Transparenz */
+        rgba(255, 255, 0, 0.2), /* Gelb mit 50% Transparenz */
+        rgba(0, 255, 0, 0.2),   /* Grün mit 50% Transparenz */
+        rgba(0, 0, 255, 0.2),   /* Blau mit 50% Transparenz */
+        rgba(75, 0, 130, 0.2),  /* Indigo mit 50% Transparenz */
+        rgba(148, 0, 211, 0.2)   /* Violett mit 50% Transparenz */
+    );
+    background-attachment: fixed;
 }
 
 .fanfiction {
@@ -27,6 +47,8 @@
     flex-direction: column;
     width: 70%;
     align-self: center;
+
+    flex-grow: 1;
 }
 
 .navbar {
@@ -37,5 +59,4 @@
 
     list-style-type: none;
     /* Breite der Items festlegen */
-    /* keine Auflistungszeichen */
 }
