--- a/styles/bookshelf.css
+++ b/styles/bookshelf.css
@@ -72,6 +72,8 @@
     .titel {
         margin-bottom: 0;
     }
+
+    /* ToDo: Hide Scrollbar!*/
 }
 
 .chapter-navigation {
@@ -93,4 +95,31 @@
     display: flex;
     text-decoration: none;
     align-items: center;
+}
+
+.two-pages-group {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+
+    .page {
+        width: 50%;
+
+        background: linear-gradient(to bottom right,
+            rgba(255, 145, 0, 0.671),
+            rgba(255, 193, 58, 0.685)
+        );
+
+        border: 2px solid;
+        border-radius: 0.25rem;
+        padding: 1rem;
+
+        font-size: medium;
+        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        line-height: 1.3;
+
+        .titel {
+            margin-top: 0;
+        }
+    }
 }
