--- a/styles/header_footer.css
+++ b/styles/header_footer.css
@@ -30,11 +30,70 @@
 
 /************** Autismus (er)leben **************/
 .autism-header {
-    background: linear-gradient(to bottom, #4B0082, #974ed3);
+    background: linear-gradient(to bottom right, #170230, #4a035f);
+    position: relative;
+    width: 100%;
+
+    .star {
+        position: absolute;
+        background-color: white; /* Farbe der Sterne */
+        border-radius: 50%; /* Runde Form */
+    }
+
+    .star:nth-child(1) { top: 20%; left: 10%; width: 2px; height: 2px; }
+    .star:nth-child(2) { top: 40%; left: 30%; width: 3px; height: 3px; }
+    .star:nth-child(3) { top: 10%; left: 50%; width: 1.5px; height: 1.5px; }
+    .star:nth-child(4) { top: 70%; left: 20%; width: 2.5px; height: 2.5px; }
+    .star:nth-child(5) { top: 80%; left: 60%; width: 1px; height: 1px; }
+    .star:nth-child(6) { top: 30%; left: 80%; width: 2px; height: 2px; }
+    .star:nth-child(7) { top: 50%; left: 70%; width: 1.5px; height: 1.5px; }
+    .star:nth-child(8) { top: 90%; left: 40%; width: 2px; height: 2px; }
+    .star:nth-child(9) { top: 60%; left: 10%; width: 3px; height: 3px; }
+    .star:nth-child(10) { top: 15%; left: 90%; width: 1px; height: 1px; }
+    .star:nth-child(11) { top: 25%; left: 15%; width: 2.5px; height: 2.5px; }
+    .star:nth-child(12) { top: 35%; left: 55%; width: 1.5px; height: 1.5px; }
+    .star:nth-child(13) { top: 5%; left: 75%; width: 2px; height: 2px; }
+    .star:nth-child(14) { top: 65%; left: 25%; width: 3px; height: 3px; }
+    .star:nth-child(15) { top: 75%; left: 85%; width: 1px; height: 1px; }
+    .star:nth-child(16) { top: 45%; left: 35%; width: 2px; height: 2px; }
+    .star:nth-child(17) { top: 55%; left: 65%; width: 1.5px; height: 1.5px; }
+    .star:nth-child(18) { top: 85%; left: 20%; width: 2px; height: 2px; }
+    .star:nth-child(19) { top: 95%; left: 50%; width: 3px; height: 3px; }
+    .star:nth-child(20) { top: 20%; left: 90%; width: 1px; height: 1px; }
 }
 
 .autism-footer {
-    background: linear-gradient(to bottom, #974ed3, #4B0082);
+    background: linear-gradient(to bottom right, #4a035f, #170230);
+    position: relative;
+    width: 100%;
+
+    .star {
+        position: absolute;
+        background-color: white; /* Farbe der Sterne */
+        border-radius: 50%; /* Runde Form */
+    }
+
+    .star:nth-child(1) { top: 15%; left: 5%; width: 2.5px; height: 2.5px; }
+    .star:nth-child(2) { top: 50%; left: 25%; width: 2px; height: 2px; }
+    .star:nth-child(3) { top: 20%; left: 60%; width: 1.8px; height: 1.8px; }
+    .star:nth-child(4) { top: 75%; left: 15%; width: 3px; height: 3px; }
+    .star:nth-child(5) { top: 85%; left: 55%; width: 1.2px; height: 1.2px; }
+    .star:nth-child(6) { top: 30%; left: 75%; width: 2.5px; height: 2.5px; }
+    .star:nth-child(7) { top: 45%; left: 80%; width: 1.5px; height: 1.5px; }
+    .star:nth-child(8) { top: 90%; left: 35%; width: 2px; height: 2px; }
+    .star:nth-child(9) { top: 65%; left: 10%; width: 3px; height: 3px; }
+    .star:nth-child(10) { top: 10%; left: 90%; width: 1px; height: 1px; }
+    .star:nth-child(11) { top: 25%; left: 20%; width: 2px; height: 2px; }
+    .star:nth-child(12) { top: 40%; left: 50%; width: 1.5px; height: 1.5px; }
+    .star:nth-child(13) { top: 5%; left: 70%; width: 2.2px; height: 2.2px; }
+    .star:nth-child(14) { top: 60%; left: 30%; width: 3px; height: 3px; }
+    .star:nth-child(15) { top: 70%; left: 85%; width: 1.5px; height: 1.5px; }
+    .star:nth-child(16) { top: 55%; left: 40%; width: 2px; height: 2px; }
+    .star:nth-child(17) { top: 80%; left: 65%; width: 1.8px; height: 1.8px; }
+    .star:nth-child(18) { top: 90%; left: 25%; width: 2.5px; height: 2.5px; }
+    .star:nth-child(19) { top: 95%; left: 50%; width: 3px; height: 3px; }
+    .star:nth-child(20) { top: 30%; left: 90%; width: 1px; height: 1px; }
+
 }
 
 /************** Queer **************/
