--- a/styles/bookshelf.css
+++ b/styles/bookshelf.css
@@ -17,6 +17,17 @@
     .cover {
         width: 100%;
         max-height: 431px;
+
+        border: 1px solid gray;
+        border-radius: 4px;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+
+        transform: rotateY(0deg);
+        transition: transform 0.5s;
+    }
+
+    .cover:hover {
+        transform: rotateY(-20deg);
     }
 }
 
@@ -66,7 +77,7 @@
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     line-height: 1.3;
 
-    max-height: 70vh;
+    max-height: 75vh;
     overflow-y: scroll;
     
     .titel {
@@ -118,8 +129,21 @@
         font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         line-height: 1.3;
 
+        max-height: 75vh;
+        overflow-y: scroll;
+
         .titel {
             margin-top: 0;
         }
+
+    }
+
+    .darkscheme {
+        background: linear-gradient(to bottom right,
+            rgba(33, 39, 209, 0.774),
+            rgba(17, 3, 97, 0.808)
+        );
+        color: lightgray;
+        border-color: rgb(17, 3, 97);
     }
 }
