--- a/styles/bookshelf.css
+++ b/styles/bookshelf.css
@@ -1,7 +1,18 @@
 .bookshelf {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
+
+    @media screen and (min-width: 680px) {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+
+    @media screen and (min-width: 1024px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    
+    @media screen and (min-width: 1512px) {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 .book {
@@ -14,9 +25,14 @@
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: larger;
 
+    height: 500px;
+    align-items: center;
+
     .cover {
-        width: 100%;
-        max-height: 431px;
+
+        max-width: 80%;
+        max-height: 90%;
+        object-fit: cover;
 
         border: 1px solid gray;
         border-radius: 4px;
@@ -49,23 +65,33 @@
 }
 
 .buchsteckbrief {
-    display: grid;
+    display: flex;
+    flex-direction: column-reverse;
     width: 70%;
     align-self: center;
-    grid-template-columns: 1fr 1fr;
 
-    .steckbrief-cover {
-        justify-self: end;
-        height: 400px;
+    @media screen and (min-width: 1024px) {
+        flex-direction: row;
+        justify-content: space-around;
+
+        .steckbrief-cover {
+            height: 400px;
+
+            border: 1px solid gray;
+            border-radius: 4px;
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+        }
     }
 }
 
 .chapter {
     display: flex;
     flex-direction: column;
-    width: 50%;
     align-self: center;
-    padding: 2rem 2.5rem;
+
+    padding: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 
     border-radius: 0.5rem;
     border: 2px solid rgba(54, 30, 1, 0.8);
@@ -76,26 +102,41 @@
     font-size: medium;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     line-height: 1.3;
-
-    max-height: 75vh;
-    overflow-y: scroll;
     
     .titel {
         margin-bottom: 0;
     }
 
     /* ToDo: Hide Scrollbar!*/
+
+    @media screen and (min-width: 1024px) {
+        width: 50%;
+        max-height: 75vh;
+        overflow-y: scroll;
+        
+        padding: 2rem 2.5rem;
+        margin: 0;
+    }
 }
 
 .chapter-navigation {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    width: 50%;
-    align-self: center;
+
+    margin-left: 1rem;
+    margin-right: 1rem;
 
     padding-top: 1rem;
+
+    @media screen and (min-width: 1024px) {
+        width: 50%;
+        justify-content: space-around;
+        align-self: center;
+        margin: 0;
+
+    }
 }
 
 .first-chapter-nav {
@@ -110,12 +151,22 @@
 
 .two-pages-group {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 2rem;
 
-    .page {
-        width: 50%;
+    margin-left: 1rem;
+    margin-right: 1rem;
 
+    overflow: scroll;
+
+    @media screen and (min-width: 1280px) {
+        flex-direction: row;
+        margin: 0;
+        overflow: hidden;
+    }
+
+
+    .page {
         background: linear-gradient(to bottom right,
             rgba(255, 145, 0, 0.671),
             rgba(255, 193, 58, 0.685)
@@ -129,8 +180,11 @@
         font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         line-height: 1.3;
 
-        max-height: 75vh;
-        overflow-y: scroll;
+        @media screen and (min-width: 1280px) {
+            width: 50%;
+            max-height: 75vh;
+            overflow-y: scroll;
+        }
 
         .titel {
             margin-top: 0;
